--- a/masonry-practice/css/main.css
+++ b/masonry-practice/css/main.css
@@ -13,18 +13,18 @@
   margin: 0 8px 8px 0;
 }
 .masonry-block:nth-child(4n+1) img{
-     width: 250px;
-     height: 200px;
+     width: 100%;
+     height: 100%;
   }
 .masonry-block:nth-child(4n+2) img{
-	height: 200px;
-	width: 250px;
+     width: 100%;
+     height: 100%;
 }
 .masonry-block:nth-child(4n+3) img{
-	height: 250px;
-	width: 250px;
+     width: 100%;
+     height: 100%;
 }
 .masonry-block:nth-child(4n+4) img{
-	width: 250px;
-
+     width: 100%;
+     height: 100%;
 }
