--- a/position-practice/modal/main.css
+++ b/position-practice/modal/main.css
@@ -1,6 +1,11 @@
 * {
 	box-sizing: border-box;
 }
+body {
+	display:block;
+	width: 100%;
+	height: 100%;
+}
 .wrapper {
 	display: block;
 	width: 100%;
