--- a/position-practice/tabs/main.css
+++ b/position-practice/tabs/main.css
@@ -7,6 +7,7 @@ button {
 	color: #808080;
 	outline: none;
 	border: 1px solid #C0C0C0;
+	border-top: 2px solid rgba(255,255,255,1);
 }
 button i {
 	padding: 10px;
