--- a/todo-list/src/core/main.scss
+++ b/todo-list/src/core/main.scss
@@ -3,44 +3,42 @@
 	margin: 0;
 	padding: 0;
 }
-body {
-	height: 100%;
-	width: 100%;
-}
 .wrapper {
 	display: block;
 	width: 100%;
 	height: 100%;
-	position: relative;
 	&-block__main {
 		display: block;
 		width: 251px;
 		height: 241px;
-		position: relative;
-		top: 20px;
-		left: 30%;
+		transform: translateY(50%);
+		margin: 0 auto;
 		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.35), inset 0 1px 0 #dfdcdc;
-	}
-	&-block__layer {
-		display: block;
-		position: absolute;
-		bottom: -9%;
-		left: 30%;
-		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.35);
-	}
-	.first {
-		width: 247px;
-		height: 3px;
-		transform: translate(3px,1px);
-	}
-	.second {
-		width: 244px;
-		height: 3px;
-		transform: translate(4px,3px);
-	}
-	.third {
-		width: 243px;
-		height: 3px;
-		transform: translate(5px,5px);
+		.list {
+			list-style-type: none;
+			.list-item {
+				display: flex;
+				height: 30px;
+				.checkbox {
+					display:flex;
+					justify-content: center;
+					border-right: 1px solid red;
+					border-bottom: 1px solid #d3d3d3;
+					padding: 8px 0 0 0;
+					flex-grow: 1;
+					input {
+					}
+				}
+				.content {
+					display: flex;
+					justify-content: space-around;
+					flex-grow: 5;
+					border-left: 1px solid red;
+					border-bottom: 1px solid #d3d3d3;
+					margin-left: 2px;
+					padding: 5px 0 0 0;
+				}
+			}
+		}
 	}
 }
