--- a/todo-list/src/core/main.scss
+++ b/todo-list/src/core/main.scss
@@ -10,7 +10,7 @@
 	&-block__main {
 		display: block;
 		width: 251px;
-		height: 241px;
+		height: 236px;
 		transform: translateY(50%);
 		margin: 0 auto;
 		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.35), inset 0 1px 0 #dfdcdc;
@@ -19,26 +19,142 @@
 			.list-item {
 				display: flex;
 				height: 30px;
+				color: #8b8f97;
+				i {
+					font-size: 13px;
+					color: #c8cace;
+					cursor: pointer;
+				}
+				i:nth-child(2) {
+					margin-left: 10px
+				}					
 				.checkbox {
 					display:flex;
+					width: 15%;
 					justify-content: center;
 					border-right: 1px solid red;
+					align-items: center;
 					border-bottom: 1px solid #d3d3d3;
-					padding: 8px 0 0 0;
-					flex-grow: 1;
-					input {
+					position: relative;
+					
+					label {
+						content: "";
+						cursor: pointer;
+						position: relative;
+						display: inline-block;
+						width: 17px;
+						height: 17px;
+						background: #fff;
+						border: 1px solid #6bb3ca;
+					}
+					input[type="checkbox"] {
+						opacity: 0;	
+						position: absolute;
+						top: 6.3px;
+						left: 11px;
+						z-index: 10;
+					}
+					input[disabled] + label{
+						background: #f2f2f2;
+						border: 1px solid #d3d3d3;
+					}
+					input[type="checkbox"]:checked + label:before {
+						content: "\2713";
+						position: absolute;
+						font-size: 15px;
+						color: rgba(0,0,0,.8);
+						margin-left: 2px;
+						text-align: center;
+ 					   line-height: 15px;
 					}
 				}
 				.content {
 					display: flex;
-					justify-content: space-around;
-					flex-grow: 5;
+					width: 85%;
 					border-left: 1px solid red;
-					border-bottom: 1px solid #d3d3d3;
 					margin-left: 2px;
-					padding: 5px 0 0 0;
+					align-items: center;
+					border-bottom: 1px solid #d3d3d3;
+					padding-left: 20px;
+					color: #676f7f;
 				}
 			}
+		.list-item:first-of-type {
+			height: 42px;
+			.checkbox {
+				input[type="checkbox"] {
+						opacity: 0;	
+						position: absolute;
+						top: 12.3px;
+						left: 11px;
+						z-index: 10;				
+					}
+				
+			}
+			.content {
+				justify-content: space-between;
+				padding: 0 20px;
+				position: relative;
+				.notation {
+					position: absolute;
+					right: 23px;
+					top: 0;
+					width: 0;
+					height: 0;
+					border-top: 10px solid rgba(0,0,0,.8);
+					border-left:  5px solid transparent;
+					border-right: 5px solid transparent;
+
+				}
+				.block {
+					position: absolute;
+					right: -2px;
+					top: -23px;
+					width: 61px;
+					height: 25px;
+					background: rgba(0,0,0,.9);
+					  padding: 5px 0px 0 9px;
+					  box-shadow: 0 1px 3px rgba(0, 0, 0, .9);
+					border-radius: 5px;
+					font-size: 13px;
+					color: #fff;
+				}
+				.window {
+					position: absolute;
+					right: 0;
+					top: 0;
+					opacity: 0;
+				}
+				.fa-cogs:hover .window {
+					opacity: 1;
+				}
+			}
+
+		}
+		.list-item:last-of-type {
+			height: 44px;
+			.checkbox, .content {
+				border-bottom: none;
+			}
+			.checkbox input,.checkbox label {
+				opacity: 0;
+				cursor: default;
+			}
+
+			.content {
+				justify-content: space-between;
+				padding: 0 20px;
+			}
+			.next {
+				background-color: #f1f0f0;
+				padding: 5px;
+				border-radius: 5px;
+				color: #676f7f;
+			}
+			.previous {
+				color:#d7d8da;
+			}
+		}
 		}
 	}
 }
