--- a/todo-list/src/core/main.scss
+++ b/todo-list/src/core/main.scss
@@ -7,6 +7,21 @@
 	display: block;
 	width: 100%;
 	height: 100%;
+	&-block__layer {
+		position: relative;
+		top: 118.5px;
+		display: block;
+		width: 247px;
+		height: 3px;
+		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.35), inset 0 1px 0 #dfdcdc;
+		margin: 0 auto;
+	}
+	.second {
+		width: 244px;
+	}
+	.third {
+		width: 243px;
+	}
 	&-block__main {
 		display: block;
 		width: 251px;
@@ -19,7 +34,6 @@
 			.list-item {
 				display: flex;
 				height: 30px;
-				color: #8b8f97;
 				i {
 					font-size: 13px;
 					color: #c8cace;
@@ -76,7 +90,8 @@
 					align-items: center;
 					border-bottom: 1px solid #d3d3d3;
 					padding-left: 20px;
-					color: #676f7f;
+					color: #8b8f97;
+;
 				}
 			}
 		.list-item:first-of-type {
