--- a/todo-list/src/core/main.scss
+++ b/todo-list/src/core/main.scss
@@ -90,7 +90,7 @@
 					align-items: center;
 					border-bottom: 1px solid #d3d3d3;
 					padding-left: 20px;
-					color: #8b8f97;
+					color: #676f7f;
 ;
 				}
 			}
