updating the form

--- a/login-page/src/core/scss/main.scss
+++ b/login-page/src/core/scss/main.scss
@@ -138,25 +138,33 @@ p {
 					border: 1px solid #d3d3d3;
 					padding: 5px;
 				}
-				.date {
-					width: 15%;
-					margin-left: 10px;
-					text-align: center;
-				}
-				.date + p {
-					text-align:right;
-					margin-right: 10px;
-				}
-				p.birth {
-					width: 46%;
-				}
-				select {
+				.birth-inputs {
+					width: 100%;
+					display: flex;
+					align-items: center;
+					select {
 					background: #fafafa;
 					border-radius: 3px;
 					border: 1px solid #d3d3d3;
 					padding: 5px;
 					color: #656565;
+
 				}
+				.date {
+					width: 20%;
+					margin-left: 10px;
+					text-align: center;
+				}
+				.date:first-child {
+					margin-left: 0;
+				}
+				.date + p {
+					text-align:right;
+					margin-right: 10px;
+				}
+				}
+
+				
 			}
 		.city {
 			display: flex;
@@ -164,6 +172,7 @@ p {
 			justify-content: space-between;
 			align-self: flex-end;
 			width: 72%;
+			margin-left: auto;
 			&-block {
 				width: 40%;
 				.input {
@@ -181,7 +190,7 @@ p {
 				align-items: center;
 				justify-content: space-around;
 				p {
-					width: 90%;
+					width: 9vw;
 					text-align: center;
 					font-size: 10px;
 					font-weight: bold;
